# prompt-builder

./: .gitignore  AGENTS.md  Cargo.toml  README.md
examples/: fixit.zsh
scripts/: herdr-tui-smoke.sh
site/prompt-builder-explainer/: index.html
src/: app.rs  app_server_launch.rs  claude_spawn.rs  cli.rs  codex_spawn.rs  composer_input.rs  external_editor.rs  file_popup.rs  file_search.rs  flow.rs  flow_form.rs  flow_popup.rs  handoff.rs  herdr.rs  history.rs  launch_manifest.rs  line_input.rs  main.rs  mdflow_spawn.rs  pi_spawn.rs  skill_popup.rs  skills.rs  slash_commands.rs  slash_popup.rs  target_popup.rs  targets.rs  theme.rs
tests/: herdr_tab_rename.rs
