[package]
name = "prompt-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.58", features = ["derive", "env"] }
crossterm = { version = "0.28.1", features = ["bracketed-paste", "event-stream"] }
dirs = "6.0.0"
ratatui = { version = "0.29.0", features = [
    "scrolling-regions",
    "unstable-backend-writer",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
tempfile = "3.27.0"
tui-textarea = "0.7.0"

[patch.crates-io]
crossterm = { git = "https://github.com/nornagon/crossterm", rev = "87db8bfa6dc99427fd3b071681b07fc31c6ce995" }
ratatui = { git = "https://github.com/nornagon/ratatui", rev = "9b2ad1298408c45918ee9f8241a6f95498cdbed2" }
